# group-07

./: .gitignore  CMakeLists.txt  README.md  local.properties
.github/workflows/: Android_CI.yml  App_CI.yml  Arduino-Build&Test.yml  Arduino-Build.yml  Arduino-Test.yml  GUI_CI.yml  arduino-build.yml
UI/: build.gradle  settings.gradle
UI/app/: build.gradle
arduino/smartcar/: Utils.h  Wrappers.h  group_7_utils.h  group_7_wrappers.h  smartcar.ino
arduino/wrappers/: Utils.cpp  Utils.h  Wrappers.h
sketches/SmartCarController/: SmartCarController.ino
sketches/SmartCarControllerTestable/: ArduinoPinController.cpp  ArduinoPinController.h  ArduinoRuntime.cpp  ArduinoRuntime.hpp  BrushedMotor.cpp  BrushedMotor.hpp  Car.h  Control.hpp  DifferentialControl.cpp  DifferentialControl.hpp  DirectionalOdometer.cpp  DirectionalOdometer.hpp  DirectionlessOdometer.cpp  DirectionlessOdometer.hpp  DistanceCar.cpp  DistanceCar.hpp  Esp32RestServer.cpp  Esp32RestServer.h  GY50.cpp  GY50.hpp  HeadingCar.cpp  HeadingCar.hpp  HeadingSensor.hpp  InterruptCallback.hpp  MQTT.h  MQTTserver.cpp  MQTTserver.h  Motor.hpp  Mqtt.h  Odometer.hpp  PinController.h  RestServer.h  Runtime.hpp  SimpleCar.cpp  SimpleCar.hpp  SmartCar.cpp  SmartCar.h  SmartCarController.cpp  SmartCarController.h  SmartCarControllerTestable.ino  (+1 more)
test/: CMakeLists.txt  car_test.cpp  smartcar_test.cpp
test/mocks/: MockCar.hpp  MockDistanceSensor.hpp  MockMqtt.hpp  MockPinController.hpp  MockRestServer.hpp  MockRuntime.hpp
test/ut/: BrushedMotor_test.cpp  GY50_test.cpp  SmartCarController_test.cpp  SmartCarTest.cpp
(+85 files in other folders)
